--- a/Workshop-Landing-Page/index.html
+++ b/Workshop-Landing-Page/index.html
@@ -117,9 +117,9 @@
 
         <section class="slider">
             <div class="slide">
-                <div><img src="images/programming-fundamentals.png" alt="Course 1"></div>
-                <div><img src="images/js-fundamentals.jpg" alt="Course 2"></div>
-                <div><img src="images/html-css-fundaments.jpg" alt="Course 3"></div>
+                <div><img src="images/programming-fundamentals.png" alt="Course 1" class="center"></div>
+                <div><img src="images/js-fundamentals.jpg" alt="Course 2" class="center"></div>
+                <div><img src="images/html-css-fundaments.jpg" alt="Course 3" class="center"></div>
             </div>
         </section>
         <section class="lecture-meeting">
@@ -220,6 +220,8 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/flatpickr "></script>
 <script src="scripts/source.js "></script>
+<script src="lib/notify.min.js"></script>
+<script src="lib/notify.js"></script>
 <script>
     format = {
         enableTime: true,
